--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -126,7 +126,7 @@
     "## Get started\n",
     "\n",
     "<LegacyContent>\n",
-    "Authenticate using your [IBM Quantum Platform API key](http://quantum.ibm.com/), and select the TEM function as follows:\n",
+    "Authenticate using your [IBM Quantum Platform API key](https://quantum.cloud.ibm.com/), and select the TEM function as follows:\n",
     "</LegacyContent>\n",
     "<CloudContent>\n",
     "Authenticate using your [IBM Quantum Platform API key](http://quantum.cloud.ibm.com/), and select the TEM function as follows:\n",
@@ -383,7 +383,7 @@
     "\n",
     "<Admonition type=\"tip\" title=\"Recommendations\">\n",
     "\n",
-    "- [Request access to Algorithmiq Tensor-network error mitigation](https://quantum.ibm.com/functions?id=4b1b9d76-c18b-4788-b70b-15125111fbe6)\n",
+    "- [Request access to Algorithmiq Tensor-network error mitigation](https://quantum.cloud.ibm.com/functions?id=algorithmiq-tem)\n",
     "\n",
     "</Admonition>"
    ]
