--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -28,7 +28,7 @@ For research papers, we encourage authors to acknowledge IBM Quantum&reg; by usi
 
 Paper references should be cited as follows:
 
-> IBM Quantum. https://<span>quantum.ibm.com</span>/, 2021
+> IBM Quantum. https://<span>quantum.cloud.ibm.com</span>/, 2021
 
 Quantum processing units in the paper should be referenced by their unique name (for example, `ibmq_vigo`) and optionally
 adding the version (for example, `ibmq_vigo` v1.0.2).  We also encourage referencing the processor.
@@ -38,13 +38,13 @@ For example:
 
 Example of citing an IBM Quantum program:
 
-> IBM Quantum (2022). Estimator primitive (Version x.y.z) [computer software]. https://<span>quantum.ibm.com</span>/
+> IBM Quantum (2022). Estimator primitive (Version x.y.z) [computer software]. https://<span>quantum.cloud.ibm.com</span>/
 
 ## How do I cite IBM Quantum Composer in my research?
 
 Example of citing IBM Quantum Composer:
 
-> IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
+> IBM Quantum Composer. 2023. url: https://<span>quantum.cloud.ibm.com/composer</span>
 
 <CloudContent>
 ## I'm an administrator but I can't access my administration tasks.
