Added surveys with no PII back to all courses

--- a/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/fault-tolerant-quantum-computing/threshold-theorem.ipynb
@@ -87,6 +87,16 @@
     "Reaching the point at which large-scale quantum computations can be implemented fault-tolerantly will not be easy, and will not happen overnight.\n",
     "But, this theorem, together with advances in quantum codes and quantum hardware, provide us with optimism as we continue to push forward to reach the ultimate goal of building a large-scale, fault-tolerant quantum computer."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fa5a2c0",
+   "metadata": {},
+   "source": [
+    "## Post-Course Survey\n",
+    "\n",
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cJ5L6VECIM7rwCG). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
+   ]
   }
  ],
  "metadata": {
