--- a/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
+++ b/learning/courses/quantum-safe-cryptography/introduction-to-this-course.mdx
@@ -6,6 +6,8 @@ description: This lesson provides an introduction to this course including an ov
 
 ## Course introduction
 
+Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_07bsNr1LgHJPgjQ), which is important to help improve our content offerings and user experience.
+
 This training is designed for both expert and non-expert developers who want to learn about how quantum computing poses a risk to existing cryptography as new quantum algorithms are able to break existing encryption schemes. 
 
 Specifically, the default information is geared towards individuals with programming knowledge but limited or no experience in cryptography or quantum concepts. Practical Python examples are given which demonstrate the mathematical principles of cryptography, and can be used for some experimentation to improve understanding. This also caters to those seeking a high-level overview of quantum cryptography's workings and its significance in the modern world.
