--- a/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
+++ b/learning/courses/foundations-of-quantum-error-correction/correcting-quantum-errors/introduction.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "# Introduction\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_3dU0dtXlJsTnlSm), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "Quantum computing has the potential to enable efficient solutions to computational tasks for which efficient classical algorithms are not known, and possibly don't exist.\n",
     "There are, however, very significant challenges that must be overcome before we can reliably implement the sorts of large-scale quantum computations we hope will one day be possible.\n",
     "\n",
