--- a/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
+++ b/learning/courses/fundamentals-of-quantum-algorithms/quantum-query-algorithms/introduction.ipynb
@@ -10,6 +10,8 @@
     "\n",
     "# Introduction\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_cZ20ssflsjutfcG), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "In this first lesson of the course, we'll formulate a simple algorithmic framework — known as the *query model* — and explore the advantages that quantum computers offer within this framework.\n",
     "\n",
     "The query model of computation is like a petri dish for quantum algorithmic ideas.\n",
