--- a/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity.ipynb
+++ b/learning/courses/general-formulation-of-quantum-information/purifications-and-fidelity/fidelity.ipynb
@@ -324,6 +324,16 @@
     "\\end{aligned}\n",
     "$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "786e016d",
+   "metadata": {},
+   "source": [
+    "## Post-Course Survey\n",
+    "\n",
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_bNoS9Adav7L8z9s). Your feedback will be used to enhance our content offering and user experience. Thank you!\"\n"
+   ]
   }
  ],
  "metadata": {
