--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -14,7 +14,9 @@
     "## About this course\n",
     "\n",
     "Welcome to *Quantum Computing in Practice* — a course that focuses on today's quantum computers and how to use them to their full potential.\n",
-    "It covers realistic potential use cases for quantum computing as well as best practices for running and experimenting with quantum processors having 100 or more qubits."
+    "It covers realistic potential use cases for quantum computing as well as best practices for running and experimenting with quantum processors having 100 or more qubits.\n",
+    "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_6PadhMQiGWsxXTM), which is important to help improve our content offerings and user experience."
    ]
   },
   {
