--- a/learning/courses/quantum-diagonalization-algorithms/exam.mdx
+++ b/learning/courses/quantum-diagonalization-algorithms/exam.mdx
@@ -7,6 +7,10 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-diagonalization-algorithms/badge.avif)
 
+## Post-Course Survey
+
+Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_6S5Y3mnEAqGmM0m). Your feedback will be used to enhance 
+
 ## Test your knowledge
 
 After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Quantum diagonalization algorithms.
