--- a/learning/courses/quantum-machine-learning/introduction.ipynb
+++ b/learning/courses/quantum-machine-learning/introduction.ipynb
@@ -26,6 +26,8 @@
     "\n",
     "## Overview and motivation\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_8wdBVMmnHcD5zg2), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "Welcome to quantum machine learning!\n",
     "\n",
     "The video below will give a brief introduction that is supplemented by the text below.\n",
