--- a/learning/courses/utility-scale-quantum-computing/introduction.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/introduction.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "Welcome to utility-scale quantum computing!\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_8qXx7I9tkmoCG34), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "This course is based on a live course held at the University of Tokyo in 2024. Each lesson consists of a PDF that was used in a lecture context, and a computational lab activity. In some cases, the labs are sparse and merely show a workflow and the explanation is in the associated PDF. In other cases, the labs contain detailed explanations and mathematical motivation.\n",
     "\n",
     "**Lessons 2-6** cover famous algorithms like Grover's and quantum phase estimation. These are undeniably important to our understanding of the potential power of quantum computing, but they are mostly tangential to the utility-scale calculation to which we are building. If you are new to quantum computing, you should definitely work through these. If you have substantial experience in quantum computing, nothing new is added in these lessons that is specific to the utility-scale calculation at hand.\n",
