--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -229,7 +229,7 @@
    "source": [
     "## Post-Course Survey\n",
     "\n",
-    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cLU5FElCNVJOhfw). Your feedback will be used to enhance our content offering and user experience. Thank you!\"\n"
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cLU5FElCNVJOhfw). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
    ]
   }
  ],
