Course update Qiskit 2.1 and PySCF (#3463)
Made minor code changes for Qiskit 2.1, like efficient_su2, minor
updates to PySCF.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/ansatz.ipynb
@@ -41,16 +41,16 @@
     "- How to build your own ansatz\n",
     "- examples of good and bad ansaetze\n",
     "\n",
-    "The Qiskit circuit library has many categories of circuits that can be used as an ansatz. Here, we will restrict our discussion to two-local circuits (circuits consisting of gates that act on, at most, two qubits at a time). __EfficientSU2__ is a commonly-used ansatz.\n",
+    "The Qiskit circuit library has many categories of circuits that can be used as an ansatz. Here, we will restrict our discussion to two-local circuits (circuits consisting of gates that act on, at most, two qubits at a time). __Efficient SU2__ is a commonly-used ansatz.\n",
     "\n",
-    "An EfficientSU2 circuit consists of layers of single qubit operations spanned by SU(2) (special unity group of degree 2, like Pauli rotation gates) and CX entanglements. This is a heuristic pattern that can be useful in variational quantum algorithms like VQE and classification circuits in quantum machine learning (QML).\n",
+    "An `efficient_su_2` circuit consists of layers of single qubit operations spanned by SU(2) (special unity group of degree 2, like Pauli rotation gates) and CX entanglements. This is a heuristic pattern that can be useful in variational quantum algorithms like VQE and classification circuits in quantum machine learning (QML).\n",
     "\n",
-    "We'll start with a four-qubit example EfficientSU2 circuit with two types of SU(2) gates, say rx and ry. We also specify an entanglement scheme and the number of repetitions. If you simply `.draw()` the circuits, you will get a fairly abstract representation. A more comprehensible circuit diagram is obtained by using `.decompose().draw()`, and here we will use `output = \"mpl\"'."
+    "We'll start with a four-qubit example `efficient_su2` circuit with two types of SU(2) gates, say rx and ry. We also specify an entanglement scheme and the number of repetitions. If you simply `.draw()` the circuits, you will get a fairly abstract representation. A more comprehensible circuit diagram is obtained by using `.decompose().draw()`, and here we will use `output = \"mpl\"'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "id": "6028e7e8-7f4e-45d1-b08b-c8d4e567c1a3",
    "metadata": {},
    "outputs": [
@@ -58,15 +58,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "     ┌────────────────────────────────────────────────────────┐\n",
-      "q_0: ┤0                                                       ├\n",
-      "     │                                                        │\n",
-      "q_1: ┤1                                                       ├\n",
-      "     │  EfficientSU2(θ[0],θ[1],θ[2],θ[3],θ[4],θ[5],θ[6],θ[7]) │\n",
-      "q_2: ┤2                                                       ├\n",
-      "     │                                                        │\n",
-      "q_3: ┤3                                                       ├\n",
-      "     └────────────────────────────────────────────────────────┘\n"
+      "     ┌──────────┐┌───┐     ┌──────────┐   ┌───┐                     \n",
+      "q_0: ┤ Rx(θ[0]) ├┤ Y ├──■──┤ Rx(θ[4]) ├───┤ Y ├─────────────────────\n",
+      "     ├──────────┤├───┤┌─┴─┐└──────────┘┌──┴───┴───┐   ┌───┐         \n",
+      "q_1: ┤ Rx(θ[1]) ├┤ Y ├┤ X ├─────■──────┤ Rx(θ[5]) ├───┤ Y ├─────────\n",
+      "     ├──────────┤├───┤└───┘   ┌─┴─┐    └──────────┘┌──┴───┴───┐┌───┐\n",
+      "q_2: ┤ Rx(θ[2]) ├┤ Y ├────────┤ X ├─────────■──────┤ Rx(θ[6]) ├┤ Y ├\n",
+      "     ├──────────┤├───┤        └───┘       ┌─┴─┐    ├──────────┤├───┤\n",
+      "q_3: ┤ Rx(θ[3]) ├┤ Y ├────────────────────┤ X ├────┤ Rx(θ[7]) ├┤ Y ├\n",
+      "     └──────────┘└───┘                    └───┘    └──────────┘└───┘\n"
      ]
     },
     {
@@ -75,15 +75,15 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/6028e7e8-7f4e-45d1-b08b-c8d4e567c1a3-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from qiskit.circuit.library import EfficientSU2\n",
+    "from qiskit.circuit.library import efficient_su2\n",
     "\n",
-    "SU2_ansatz = EfficientSU2(4, su2_gates=[\"rx\", \"y\"], entanglement=\"linear\", reps=1)\n",
+    "SU2_ansatz = efficient_su2(4, su2_gates=[\"rx\", \"y\"], entanglement=\"linear\", reps=1)\n",
     "print(SU2_ansatz.draw())\n",
     "SU2_ansatz.decompose().draw(output=\"mpl\")"
    ]
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "id": "e7eb387b-8766-4f3c-a0cc-f07b4b6d5e85",
    "metadata": {},
    "outputs": [
@@ -108,13 +108,15 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/e7eb387b-8766-4f3c-a0cc-f07b4b6d5e85-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SU2_ansatz2 = EfficientSU2(4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"linear\", reps=2)\n",
+    "SU2_ansatz2 = efficient_su2(\n",
+    "    4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"linear\", reps=2\n",
+    ")\n",
     "SU2_ansatz2.decompose().draw(output=\"mpl\")"
    ]
   },
@@ -128,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "id": "b2cc6b8a-c6e8-456f-ac0c-1f8b33ef964b",
    "metadata": {},
    "outputs": [
@@ -138,13 +140,13 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/b2cc6b8a-c6e8-456f-ac0c-1f8b33ef964b-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SU2_ansatz3 = EfficientSU2(\n",
+    "SU2_ansatz3 = efficient_su2(\n",
     "    4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"circular\", reps=1\n",
     ")\n",
     "SU2_ansatz3.decompose().draw(output=\"mpl\")"
@@ -152,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 6,
    "id": "60f394ba-f338-4be9-83b4-18767c813886",
    "metadata": {},
    "outputs": [
@@ -162,13 +164,13 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/60f394ba-f338-4be9-83b4-18767c813886-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SU2_ansatz4 = EfficientSU2(4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"full\", reps=1)\n",
+    "SU2_ansatz4 = efficient_su2(4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"full\", reps=1)\n",
     "SU2_ansatz4.decompose().draw(output=\"mpl\")"
    ]
   },
@@ -177,12 +179,12 @@
    "id": "7a958757",
    "metadata": {},
    "source": [
-    "You can monitor your circuit depths by using `.depth()`, but note that, just as in the visualization, it is important to `.decompose()` first. Otherwise, the `.depth()` will count the entire ansatz as a single circuit element."
+    "You can monitor your circuit depths by using `.depth()`, or sometimes `.decompose().depth()`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "id": "b2570edd-8903-4468-b7ef-ba11415e3785",
    "metadata": {},
    "outputs": [
@@ -190,14 +192,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "1\n"
+      "11\n"
      ]
     }
    ],
    "source": [
-    "print(SU2_ansatz4.decompose().depth())\n",
-    "print(SU2_ansatz4.depth())"
+    "print(SU2_ansatz4.decompose().depth())"
    ]
   },
   {
@@ -205,12 +205,12 @@
    "id": "79c2c9fd",
    "metadata": {},
    "source": [
-    "A generalization of the EfficientSU2 is the TwoLocal circuit. The TwoLocal also contains SU(2) blocks (or rotation blocks) and entanglement blocks. Here, we are free to specify the type of entanglement gates we want to use, for example CRX gates. In this example, all gates accept a parameter, but that need not be the case. One could use Y rotation gates and CX entanglement gates, for example."
+    "A generalization of the efficient_su2 is the two-local circuit, which is itself a special case of the n-local circuits. The two-local circuits also contains SU(2) blocks (or rotation blocks) and entanglement blocks. Here, we are free to specify the type of entanglement gates we want to use, for example CRX gates. In this example, all gates accept a parameter, but that need not be the case. One could use Y rotation gates and CX entanglement gates, for example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 12,
    "id": "fdb6071a-7f29-4214-960c-93c304e64a6a",
    "metadata": {},
    "outputs": [
@@ -220,17 +220,17 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/fdb6071a-7f29-4214-960c-93c304e64a6a-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from qiskit.circuit.library import TwoLocal\n",
+    "from qiskit.circuit.library import n_local\n",
     "\n",
     "rotation_blocks = [\"ry\"]\n",
     "entanglement_blocks = [\"crx\"]\n",
-    "two_ansatz = TwoLocal(\n",
+    "two_ansatz = n_local(\n",
     "    4, rotation_blocks, entanglement_blocks, \"linear\", insert_barriers=True, reps=2\n",
     ")\n",
     "two_ansatz.decompose().draw(output=\"mpl\")"
@@ -241,12 +241,12 @@
    "id": "29687857",
    "metadata": {},
    "source": [
-    "The last ansatz we will discuss by name is the PauliTwoDesign. This circuit contains an initial rotation of $RY(pi/4)$, and rotation layers contain single qubit Pauli rotations, where the axis is chosen uniformly at random to be X, Y, or Z. The entanglement layers are composed of pairwise CZ gates with a total depth of two. Note the difference in entanglement (and total circuit) depth between this PauliTwoDesign and, for example, the EfficientSU2."
+    "The last ansatz we will discuss by name is the Pauli-two-design. This circuit contains an initial rotation of $RY(pi/4)$, and rotation layers contain single qubit Pauli rotations, where the axis is chosen uniformly at random to be X, Y, or Z. The entanglement layers are composed of pairwise CZ gates with a total depth of two. Note the difference in entanglement (and total circuit) depth between this pauli_two_design and, for example, the efficient_su2."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 14,
    "id": "1cff47db-5ee5-4e58-ac99-cbc2af9801c7",
    "metadata": {},
    "outputs": [
@@ -256,15 +256,15 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/1cff47db-5ee5-4e58-ac99-cbc2af9801c7-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from qiskit.circuit.library import PauliTwoDesign\n",
+    "from qiskit.circuit.library import pauli_two_design\n",
     "\n",
-    "PtwoD_ansatz = PauliTwoDesign(5, reps=1, seed=10599, insert_barriers=True)\n",
+    "PtwoD_ansatz = pauli_two_design(5, reps=1, seed=10599, insert_barriers=True)\n",
     "PtwoD_ansatz.decompose().draw(output=\"mpl\")"
    ]
   },
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1e7ad487-fc57-4c76-abb2-6279695fab5f",
    "metadata": {},
    "outputs": [
@@ -297,7 +297,7 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/1e7ad487-fc57-4c76-abb2-6279695fab5f-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "f8ef9c33",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/f8ef9c33-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 17,
    "id": "73627a8d",
    "metadata": {},
    "outputs": [
@@ -414,17 +414,17 @@
        "<Image src=\"/learning/images/courses/quantum-chem-with-vqe/ansatz/extracted-outputs/73627a8d-1.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "SU2_ansatz_long = EfficientSU2(\n",
+    "su2_ansatz_long = efficient_su2(\n",
     "    4, su2_gates=[\"rx\", \"y\", \"z\"], entanglement=\"linear\", reps=4\n",
     ")\n",
-    "print(SU2_ansatz_long.decompose().depth())\n",
-    "SU2_ansatz_long.decompose().draw(output=\"mpl\")"
+    "print(su2_ansatz_long.decompose().depth())\n",
+    "su2_ansatz_long.decompose().draw(output=\"mpl\")"
    ]
   },
   {
