--- a/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/skqd.ipynb
@@ -242,7 +242,9 @@
     "warnings.filterwarnings(\"ignore\")\n",
     "\n",
     "service = QiskitRuntimeService()\n",
-    "backend = service.backend(\"ibm_kyiv\")"
+    "# Use the least-busy backend or specify a quantum computer using the syntax commented out below.\n",
+    "backend = service.least_busy(operational=True, simulator=False)\n",
+    "# backend = service.backend(\"ibm_kyiv\")"
    ]
   },
   {
