--- a/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
+++ b/learning/courses/quantum-machine-learning/qvc-qnn.ipynb
@@ -206,24 +206,24 @@
     "$$\n",
     "Here, $U(\\vec{x})$ is the encoding circuit, for which we have many options as seen in previous lessons. $W(\\theta)$ is a variational, or trainable circuit block, and $\\theta$ is the set of parameters to be trained. Those parameters will be varied by classical optimization algorithms to find the set of parameters that yields the best classification of images by the quantum circuit. This variational circuit is sometimes called the \"ansatz\". Finally, $O$ is some observable that will be estimated using the Estimator primitive. There is no constraint that forces the layers to come in this order, or even to be fully separate. One could have multiple variational and/or encoding layers in any order that is technically motivated.\n",
     "\n",
-    "We start by choosing a feature map to encode our data. We will use the ```ZFeatureMap```, as it keeps circuit depths low compared to some other feature mappings."
+    "We start by choosing a feature map to encode our data. We will use the ```z_feature_map```, as it keeps circuit depths low compared to some other feature mappings."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "83adf797-5c8f-4bba-826a-fa3c82d7affb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.circuit.library import ZFeatureMap\n",
+    "from qiskit.circuit.library import z_feature_map\n",
     "\n",
     "# One qubit per data feature\n",
     "num_qubits = len(train_images[0])\n",
     "\n",
     "# Data encoding\n",
     "# Note that qiskit orders parameters alphabetically. We assign the parameter prefix \"a\" to ensure our data encoding goes to the first part of the circuit, the feature mapping.\n",
-    "feature_map = ZFeatureMap(num_qubits, parameter_prefix=\"a\")"
+    "feature_map = z_feature_map(num_qubits, parameter_prefix=\"a\")"
    ]
   },
   {
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "d68f1b36-f181-4880-9cb8-260bfc817b09",
    "metadata": {},
    "outputs": [
@@ -573,7 +573,7 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\", instance=\"ibm-q/open/main\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "print(backend.name)"
    ]
@@ -588,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "7d2db83d-3d33-4159-aa3f-297e9507a497",
    "metadata": {},
    "outputs": [],
@@ -603,11 +603,16 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "target = backend.target\n",
+    "\n",
     "pm = generate_preset_pass_manager(target=target, optimization_level=3)\n",
     "pm.scheduling = PassManager(\n",
     "    [\n",
     "        ALAPScheduleAnalysis(target=target),\n",
-    "        ConstrainedReschedule(target.acquire_alignment, target.pulse_alignment),\n",
+    "        ConstrainedReschedule(\n",
+    "            acquire_alignment=target.acquire_alignment,\n",
+    "            pulse_alignment=target.pulse_alignment,\n",
+    "            target=target,\n",
+    "        ),\n",
     "        PadDynamicalDecoupling(\n",
     "            target=target,\n",
     "            dd_sequence=[XGate(), XGate()],\n",
@@ -1400,19 +1405,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "63c8619a-ec0b-4b6e-91fa-41a264fa7e32",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.circuit.library import ZFeatureMap\n",
+    "from qiskit.circuit.library import z_feature_map\n",
     "\n",
     "# One qubit per data feature\n",
     "num_qubits = len(train_images[0])\n",
     "\n",
     "# Data encoding\n",
     "# Note that qiskit orders parameters alphabetically. We assign the parameter prefix \"a\" to ensure our data encoding goes to the first part of the circuit, the feature mapping.\n",
-    "feature_map = ZFeatureMap(num_qubits, parameter_prefix=\"a\")"
+    "feature_map = z_feature_map(num_qubits, parameter_prefix=\"a\")"
    ]
   },
   {
@@ -1505,7 +1510,7 @@
    "id": "53c81996-7269-4aca-893a-53082287ef6f",
    "metadata": {},
    "source": [
-    "Because we are using the ```ZFeatureMap```, which has no CNOT gates, adding the encoding layer does not increase our two-qubit depth. We can visualize the full circuit here."
+    "Because we are using the ```z_feature_map```, which has no CNOT gates, adding the encoding layer does not increase our two-qubit depth. We can visualize the full circuit here."
    ]
   },
   {
@@ -1562,7 +1567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "552bb4ef-a3c8-42fc-9ced-13c88564bf4c",
    "metadata": {},
    "outputs": [
@@ -1577,11 +1582,11 @@
    "source": [
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
-    "service = QiskitRuntimeService(\n",
-    "    channel=\"ibm_quantum\", instance=\"client-enablement/content/qal-20\"\n",
-    ")\n",
+    "# To run on hardware, select the least busy quantum computer or specify a particular one.\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "# backend = service.backend(\"ibm_kyoto\")\n",
+    "\n",
     "print(backend.name)"
    ]
   },
@@ -1595,7 +1600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "16b93237-bbea-4da9-9f07-89c4f3e78717",
    "metadata": {},
    "outputs": [],
@@ -1610,11 +1615,21 @@
     "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
     "\n",
     "target = backend.target\n",
+    "\n",
     "pm = generate_preset_pass_manager(target=target, optimization_level=3)\n",
     "pm.scheduling = PassManager(\n",
     "    [\n",
     "        ALAPScheduleAnalysis(target=target),\n",
-    "        ConstrainedReschedule(target.acquire_alignment, target.pulse_alignment),\n",
+    "        ConstrainedReschedule(\n",
+    "            acquire_alignment=target.acquire_alignment,\n",
+    "            pulse_alignment=target.pulse_alignment,\n",
+    "            target=target,\n",
+    "        ),\n",
+    "        PadDynamicalDecoupling(\n",
+    "            target=target,\n",
+    "            dd_sequence=[XGate(), XGate()],\n",
+    "            pulse_alignment=target.pulse_alignment,\n",
+    "        ),\n",
     "    ]\n",
     ")"
    ]
@@ -1943,7 +1958,7 @@
     "To recap, in this lesson we learned the workflow for binary classification of images using a quantum neural network. Some key considerations in each Qiskit patterns step were:\n",
     "\n",
     "__Step 1:__ Map the problem to a quantum circuit\n",
-    "* Load training data. This could be done \"by hand\" or using a pre-built feature map like ```ZFeatureMap```.\n",
+    "* Load training data. This could be done \"by hand\" or using a pre-built feature map like ```z_feature_map```.\n",
     "* Construct an ansatz containing rotation and entanglement layers that are appropriate for your problem.\n",
     "* Monitor circuit depth to ensure quality results on quantum computers.\n",
     "\n",
