--- a/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/hamiltonian-construction.ipynb
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b802fd0d-40d5-45f1-9cdc-4ae4c5914d82",
    "metadata": {},
    "outputs": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "id": "3375bd43-b53d-479e-93f5-7ec37d9e6a34",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "id": "f8833e31-77e6-446b-9d3c-1e394fbe1661",
    "metadata": {},
    "outputs": [],
@@ -156,17 +156,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "dc4d672b-e73a-4822-b158-b17736d9a197",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pyscf.gto.mole.Mole at 0x7f45c63899d0>"
+       "<pyscf.gto.mole.Mole at 0x7fc718f07610>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "a22e88c6-ef7d-4089-9461-28ed70ebae13",
    "metadata": {},
    "outputs": [
@@ -211,38 +211,20 @@
     }
    ],
    "source": [
+    "mf = scf.RHF(mol)\n",
+    "mf.scf()\n",
+    "\n",
     "print(\n",
-    "    mol.energy_nuc(),\n",
-    "    mol.energy_elec()[0],\n",
-    "    mol.energy_tot(),\n",
-    "    mol.energy_tot() - mol.energy_nuc(),\n",
+    "    mf.energy_nuc(),\n",
+    "    mf.energy_elec()[0],\n",
+    "    mf.energy_tot(),\n",
+    "    mf.energy_tot() - mol.energy_nuc(),\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "55a0e052-1018-41b8-b9d8-e0ad4c673d36",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(-1.8455976628764188, 0.67565609246518)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mol.energy_elec()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "7e1a23ba-d2ac-4961-8c29-8be7e1163c9e",
    "metadata": {},
    "outputs": [],
@@ -274,12 +256,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "e58fe57a-8135-429d-bd53-2ad4f0a93806",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mf = scf.RHF(mol)\n",
     "E1 = mf.kernel()\n",
     "mx = mcscf.CASCI(mf, ncas=2, nelecas=(1, 1))\n",
     "mo = mx.sort_mo(active_space, base=0)\n",
@@ -296,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "1025a53a-7414-47f3-9b78-10acb03615d4",
    "metadata": {},
    "outputs": [],
@@ -327,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "af2deda9-75e3-464f-a4e3-489e00631e92",
    "metadata": {},
    "outputs": [],
@@ -370,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b6c0a6a7-94e8-448d-b911-858bc79e6242",
    "metadata": {},
    "outputs": [],
@@ -407,7 +388,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "6eeb704d-202c-4c54-8f1a-a2d98f99342e",
    "metadata": {},
    "outputs": [],
@@ -458,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "4e951f66-6632-4f07-973e-6c505a1b7a87",
    "metadata": {},
    "outputs": [
@@ -492,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "400658f1-ce74-460d-8bd6-f78c715982e1",
    "metadata": {},
    "outputs": [],
@@ -530,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 14,
    "id": "d3269648-538e-41a5-b343-f75e3ffadb28",
    "metadata": {},
    "outputs": [
@@ -547,7 +528,7 @@
        "276"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -566,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 15,
    "id": "29fa8e0b-9481-4ab6-841d-e2ba0a076986",
    "metadata": {},
    "outputs": [
@@ -574,13 +555,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "System: uname_result(system='Linux', node='IBM-R912JTRT', release='5.10.102.1-microsoft-standard-WSL2', version='#1 SMP Wed Mar 2 00:30:59 UTC 2022', machine='x86_64', processor='x86_64')  Threads 16\n",
-      "Python 3.7.6 (default, Jan  8 2020, 19:59:22) \n",
-      "[GCC 7.3.0]\n",
-      "numpy 1.21.6  scipy 1.7.3\n",
-      "Date: Sun Oct 15 04:24:52 2023\n",
-      "PySCF version 2.1.1\n",
-      "PySCF path  /home/porter284/anaconda3/lib/python3.7/site-packages/pyscf\n",
+      "System: uname_result(system='Linux', node='IBM-R912JTRT', release='5.10.102.1-microsoft-standard-WSL2', version='#1 SMP Wed Mar 2 00:30:59 UTC 2022', machine='x86_64')  Threads 16\n",
+      "Python 3.11.12 (main, May 16 2025, 02:33:32) [GCC 11.4.0]\n",
+      "numpy 2.3.1  scipy 1.16.0  h5py 3.14.0\n",
+      "Date: Mon Jun 30 12:56:55 2025\n",
+      "PySCF version 2.9.0\n",
+      "PySCF path  /home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/pyscf\n",
       "\n",
       "[CONFIG] conf_file None\n",
       "[INPUT] verbose = 4\n",
@@ -608,16 +588,16 @@
       "number of NR cGTOs = 6\n",
       "basis = sto-6g\n",
       "ecp = {}\n",
-      "CPU time:        69.98\n"
+      "CPU time:         9.85\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<pyscf.gto.mole.Mole at 0x7f5e9c7252d0>"
+       "<pyscf.gto.mole.Mole at 0x7fc719f94850>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,10 +637,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "555442e7-e883-4465-9278-5312cd8d1fd0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "System: uname_result(system='Linux', node='IBM-R912JTRT', release='5.10.102.1-microsoft-standard-WSL2', version='#1 SMP Wed Mar 2 00:30:59 UTC 2022', machine='x86_64')  Threads 16\n",
+      "Python 3.11.12 (main, May 16 2025, 02:33:32) [GCC 11.4.0]\n",
+      "numpy 2.3.1  scipy 1.16.0  h5py 3.14.0\n",
+      "Date: Mon Jun 30 12:57:07 2025\n",
+      "PySCF version 2.9.0\n",
+      "PySCF path  /home/porter284/.pyenv/versions/3.11.12/lib/python3.11/site-packages/pyscf\n",
+      "\n",
+      "[CONFIG] conf_file None\n",
+      "[INPUT] verbose = 4\n",
+      "[INPUT] num. atoms = 6\n",
+      "[INPUT] num. electrons = 16\n",
+      "[INPUT] charge = 0\n",
+      "[INPUT] spin (= nelec alpha-beta = 2S) = 0\n",
+      "[INPUT] symmetry True subgroup None\n",
+      "[INPUT] Mole.unit = angstrom\n",
+      "[INPUT] Symbol           X                Y                Z      unit          X                Y                Z       unit  Magmom\n",
+      "[INPUT]  1 C      0.000000000000   0.000000000000   1.000000000000 AA    0.000000000000   0.000000000000   1.889726124565 Bohr   0.0\n",
+      "[INPUT]  2 C      0.000000000000   0.000000000000  -1.000000000000 AA    0.000000000000   0.000000000000  -1.889726124565 Bohr   0.0\n",
+      "[INPUT]  3 H      0.000000000000   1.000000000000   1.000000000000 AA    0.000000000000   1.889726124565   1.889726124565 Bohr   0.0\n",
+      "[INPUT]  4 H      0.000000000000  -1.000000000000   1.000000000000 AA    0.000000000000  -1.889726124565   1.889726124565 Bohr   0.0\n",
+      "[INPUT]  5 H      0.000000000000   1.000000000000  -1.000000000000 AA    0.000000000000   1.889726124565  -1.889726124565 Bohr   0.0\n",
+      "[INPUT]  6 H      0.000000000000  -1.000000000000  -1.000000000000 AA    0.000000000000  -1.889726124565  -1.889726124565 Bohr   0.0\n",
+      "\n",
+      "nuclear repulsion = 29.3377079104231\n",
+      "point group symmetry = D2h\n",
+      "symmetry origin: [0. 0. 0.]\n",
+      "symmetry axis x: [0. 1. 0.]\n",
+      "symmetry axis y: [1. 0. 0.]\n",
+      "symmetry axis z: [-0. -0. -1.]\n",
+      "num. orbitals of irrep Ag = 4\n",
+      "num. orbitals of irrep B2g = 2\n",
+      "num. orbitals of irrep B3g = 1\n",
+      "num. orbitals of irrep B1u = 4\n",
+      "num. orbitals of irrep B2u = 1\n",
+      "num. orbitals of irrep B3u = 2\n",
+      "number of shells = 10\n",
+      "number of NR pGTOs = 84\n",
+      "number of NR cGTOs = 14\n",
+      "basis = sto-6g\n",
+      "ecp = {}\n",
+      "CPU time:         9.92\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<pyscf.gto.mole.Mole at 0x7fc719fa9290>"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Replace these variables with correct distances:\n",
     "a = 1\n",
@@ -710,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 17,
    "id": "55448849-e0a0-489b-9edb-86bad0dad75b",
    "metadata": {},
    "outputs": [],
@@ -728,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 18,
    "id": "e8b42f17-9d8a-4564-8c6c-b1d0130690fb",
    "metadata": {},
    "outputs": [
@@ -756,7 +794,7 @@
     "\n",
     "There are several software packages developed for quantum chemistry, some offering multiple mappers and tools for restricting active spaces. The steps described above are general and apply to third-party software as well. But this other software may return Hamiltonians in a format that is not accepted by Qiskit. For example, some software returns Hamiltonians of the form:\n",
     "\n",
-    "H = -0.042 [] + -0.045 [X0 X1 Y2 Y3] + ... + 0.178 [Z0] + ... + 0.176 [Z2 Z3] + -0.243 [Z3]"
+    "`H = -0.042 [] + -0.045 [X0 X1 Y2 Y3] + ... + 0.178 [Z0] + ... + 0.176 [Z2 Z3] + -0.243 [Z3]`"
    ]
   },
   {
@@ -764,14 +802,14 @@
    "id": "8fa9546f-1cb2-4e4d-816f-8ee630b7e133",
    "metadata": {},
    "source": [
-    "Note in particular that the gates are numbered, and identity operators are not shown. This is in contrast to Hamiltonians used in Qiskit, which would write the term [Z2 Z3] as \"ZZII\" (qubits 0 and 1 being acting on by the identity operator, qubits 2 and 3 being acted on by the Z operator, ordered with qubit 0 furthest to the right).\n",
+    "Note in particular that the gates are numbered, and identity operators are not shown. This is in contrast to Hamiltonians used in Qiskit, which would write the term `[Z2 Z3]` as `ZZII` (qubits 0 and 1 being acting on by the identity operator, qubits 2 and 3 being acted on by the Z operator, ordered with qubit 0 furthest to the right).\n",
     "\n",
     "To accommodate any existing workstreams you have, the code block below converts from one syntax to the other. The function `convert_openfermion_to_qiskit` takes as its arguments a Hamiltonian generated in OpenFermion or Tangelo (and already mapped onto Pauli operators using any available mapper), and the number of qubits needed for the molecule."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "435e8271-b48e-4e89-9166-91c9cc6f4563",
    "metadata": {},
    "outputs": [],
