--- a/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
+++ b/learning/courses/quantum-diagonalization-algorithms/krylov.ipynb
@@ -1109,7 +1109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "afa233e1-1e80-4843-a958-0f84cec707ea",
    "metadata": {},
    "outputs": [],
@@ -1127,7 +1127,7 @@
     "from qiskit.synthesis import LieTrotter\n",
     "\n",
     "# from qiskit.providers.fake_provider import Fake20QV1\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
+    "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator, Batch\n",
     "\n",
     "import itertools as it\n",
     "\n",
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5446eb74-126f-4db1-b018-d5f4613f79e7",
    "metadata": {},
    "outputs": [],
@@ -1203,7 +1203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "f2d43bcc-5210-448d-b3d9-996796f782f6",
    "metadata": {},
    "outputs": [],
@@ -1269,7 +1269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "8b547f8a-df47-4e56-921b-3955eb7c19a9",
    "metadata": {},
    "outputs": [
@@ -1325,17 +1325,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "3dd96fbe-47bb-444b-b403-c67c2dcc9d07",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.17453292519943295"
+       "np.float64(0.17453292519943295)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1374,7 +1374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "d95c6f17-7275-474a-b1e5-a41c4539ed83",
    "metadata": {},
    "outputs": [],
@@ -1397,17 +1397,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "410192fb-8197-4860-8c3a-2e874e2f9c56",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Image src=\"/learning/images/courses/quantum-diagonalization-algorithms/qda-2-krylov/extracted-outputs/410192fb-8197-4860-8c3a-2e874e2f9c56-0.avif\" alt=\"Output of the previous code cell\" />"
+       "<Image src=\"/learning/images/courses/quantum-diagonalization-algorithms/krylov/extracted-outputs/410192fb-8197-4860-8c3a-2e874e2f9c56-0.avif\" alt=\"Output of the previous code cell\" />"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1864,24 +1864,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "id": "5683752b-d520-4cad-9fe9-7ebb7f495ba0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from qiskit_ibm_runtime import QiskitRuntimeService, Batch\n",
-    "\n",
-    "# service = QiskitRuntimeService(channel = 'ibm_quantum')\n",
-    "# service = QiskitRuntimeService()\n",
-    "# backend_id = 'ibm_cusco'\n",
-    "# backend_id = 'test_eagle_us-east'\n",
-    "# backend = service.backend(backend_id)\n",
-    "\n",
-    "from qiskit_ibm_runtime import Batch\n",
-    "\n",
     "service = QiskitRuntimeService()\n",
-    "backend_id = \"ibm_torino\"\n",
-    "backend = service.backend(backend_id)"
+    "# Use the least-busy backend or specify a quantum computer using the syntax commented out below.\n",
+    "backend = service.least_busy(operational=True, simulator=False)\n",
+    "# backend = service.backend(\"ibm_torino\")"
    ]
   },
   {
