--- a/learning/courses/quantum-computing-in-practice/mapping.ipynb
+++ b/learning/courses/quantum-computing-in-practice/mapping.ipynb
@@ -227,7 +227,7 @@
    "id": "acce5dec",
    "metadata": {},
    "source": [
-    "## Post-Course Survey\n",
+    "## Post-course survey\n",
     "\n",
     "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cLU5FElCNVJOhfw). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
    ]
