--- a/learning/courses/quantum-machine-learning/exam.mdx
+++ b/learning/courses/quantum-machine-learning/exam.mdx
@@ -7,7 +7,7 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 ![A square badge stating the name of this course, foundational level, and issued by IBM Quantum&reg;.](/learning/images/courses/quantum-machine-learning/exam/badge.avif)
 
-## Post-Course Survey
+## Post-course survey
 
 Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_a68ils4bH0vX0O2). Your feedback will be used to enhance our content offering and user experience. Thank you!"
 
