--- a/docs/guides/cloud-setup-invited.mdx
+++ b/docs/guides/cloud-setup-invited.mdx
@@ -1,14 +1,14 @@
 ---
-title: Set up your IBM Cloud account
-description: Setup instructions for IBM Quantum on IBM Cloud to submit Qiskit SDK and Qiskit Runtime jobs for users without email invitations
+title: Set up your IBM Cloud account - invited users
+description: Setup instructions for IBM Quantum on IBM Cloud to submit Qiskit SDK and Qiskit Runtime jobs for users with email invitations
 platform: cloud
 ---
 
 {/* cspell:ignore urlendcoded, WQVY */}
 
-# Set up your IBM Cloud account
+# Set up your IBM Cloud account - invited users
 
-If you have an invitation to join an account, follow the steps in [Set up your IBM Cloud account - invited users](/docs/guides/cloud-setup-invited) instead.
+If you do not have an invitation from an administrator to join an account, follow the steps in [Set up your IBM Cloud account](/docs/guides/cloud-setup) instead.
 
 You can run workloads on IBM&reg; quantum processing units (QPUs) by setting up an account on IBM Cloud&reg;. You will also need to [install and set up Qiskit and Qiskit Runtime](/docs/guides/install-qiskit#local).
 
@@ -29,42 +29,19 @@ Your user account is associated with one or more [instances](./instances) that g
 
 1. Ensure you are working in an active Python environment with the [Qiskit SDK and Qiskit Runtime installed](/docs/guides/install-qiskit#local).
 
+1. Accept the email invitation.
 1. If you do not already have one, set up an [IBM Cloud account.](https://quantum.cloud.ibm.com/registration)
    <Admonition type="note">
    You can have multiple IBM Cloud accounts.  You can access any of your IBM Cloud accounts at any time from the account switcher in the top header of the [IBM Quantum Platform interface](https://quantum.cloud.ibm.com).
    </Admonition>
 
-### 1. Create an instance
-
-    Go to the [IBM Quantum Platform dashboard.](https://quantum.cloud.ibm.com) If you have one or more instances shown, skip this step. Otherwise, follow these steps to create an instance.
-
-    1. Make sure that you have the correct account selected from the account switcher in the top header. Click **Create instance**.
-         * Choose a name and the plan to use.
-         * If you are creating an instance of the Standard Plan, it is recommended that you set the total cost limit or the usage limit. (These values can be updated later.)
-         * Scroll down to see the **Terms** link.  After reading the terms, agree to the license agreements by checking the box in the bottom right corner of the page, and click **Next**.
-    1. On the Plan inheritance page, leave the default setting (toggle is not enabled) and click **Next** if you're setting up an Open instance.
-
-        If you are not setting up an Open instance and you want different QPUs to be available on this instance, enable the "Customize allocated compute resources" toggle, choose the QPUs you want this instance to be able to access, then click **Next**.
-        <Admonition type="note">
-       If you customize the allocated compute resources, the available QPUs will never be automatically updated, regardless of any changes made to the parent plan.  However, you can manually add or remove QPUs later.
-        </Admonition>
-    1. Choose whether you want an access group to be created for this instance and click **Create instance**.   This access group allows other users (collaborators) to share the time allocated to this instance.  Collaborators can be added on the Users page.
-
-       For an Open instance, you probably don't need this access group, although creating one won't impact your usage unless you add another user to the group.
-
-       You can add or remove access groups at any time from IBM Cloud.  See [Setting up access groups](https://cloud.ibm.com/docs/account?topic=account-groups&interface=ui) for instructions.
-
-        <Admonition type="note">
-          If you are an administrator who needs to set up Qiskit Runtime on Cloud for your organization, refer to [Plan Qiskit Runtime for an organization](https://cloud.ibm.com/docs/quantum-computing?topic=quantum-computing-considerations-set-up-runtime).
-        </Admonition>
-
 <span id="access-credentials"></span>
-### 2. Find your access credentials
+### 1. Find your access credentials
     1. Find your API key. From the [dashboard](https://quantum.cloud.ibm.com/), create your API key, then copy it to a secure location so you can use it for authentication.
     2. Optional: Find your CRN from the Instances section of the dashboard. Click the icon to copy your CRN for the instance you want to use, then save it in a secure location so you can use it to identify the instance.
 
 <span id="cloud-save"></span>
-### 3. Initialize the service (trusted environment)
+### 2. Initialize the service (trusted environment)
 If you are working in a trusted Python environment (such as on a personal laptop or workstation), use the `save_account()` method to save your credentials locally, then use them to initialize the service.
 
 1. Activate a Python virtual environment, run Python in your virtual environment, and enter the following:
@@ -105,7 +82,7 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
       * If you don't save your credentials, you must specify them every time you start a new session.
 
 <span id="cloud-untrusted"></span>
-### 3. Initialize the service (untrusted environment)
+### 2. Initialize the service (untrusted environment)
     Follow these instructions to authenticate to IBM Cloud if you are not using a trusted environment.
     **Avoid executing code on an untrusted machine or an external cloud Python environment to minimize security risks.** If you must use an untrusted environment (on, for example, a shared or public computer), change your API key after each use by deleting it on the [API keys page](https://cloud.ibm.com/iam/apikeys) and creating a new one.
 
@@ -127,7 +104,7 @@ When an instance CRN or name is passed in, only backends and jobs from that inst
       instance="<IBM Cloud CRN or instance name>"
       )
     ```
-### 4. Optional: Configure your firewall.
+### 3. Optional: Configure your firewall.
 
     If necessary, use [this information](/docs/guides/quickstart-steps-org#firewall) to enable access to the IBM Quantum API endpoints.
 
