add tutorial for edc

--- a/docs/tutorials/index.mdx
+++ b/docs/tutorials/index.mdx
@@ -81,6 +81,8 @@ This section introduces advanced capabilities within the Qiskit ecosystem that e
 
 Workload optimization focuses on either efficient orchestration of classical and quantum resources or tailored methods for improving quantum circuit manipulation. 
 
+* [Benchmark dynamic circuts with cut Bell pairs](/docs/tutorials/edc-cut-bell-pair-benchmarking)
+
 * [Qiskit AI-powered transpiler service introduction](/docs/tutorials/ai-transpiler-introduction)
 
 * [Transpilation optimizations with SABRE](/docs/tutorials/transpilation-optimizations-with-sabre)
