Added surveys back in. (#3476)
Added all the new surveys with no PII.

---------

Co-authored-by: ABBY CROSS <across@us.ibm.com>

--- a/learning/courses/fundamentals-of-quantum-algorithms/exam.mdx
+++ b/learning/courses/fundamentals-of-quantum-algorithms/exam.mdx
@@ -7,6 +7,10 @@ description: Take a 20-question exam on the IBM Training site to test your quant
 
 ![A square badge stating the name of this course, intermediate level, and issued by IBM Quantum&reg;.](/learning/images/courses/fundamentals-of-quantum-algorithms/exam/badge.avif)
 
+## Post-course survey
+
+Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_43oo99mkThQFIFM). Your feedback will be used to enhance our content offering and user experience. Thank you!"
+
 ## Test your knowledge
 
 After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Fundamentals of quantum algorithms.
