--- a/learning/courses/quantum-chem-with-vqe/introduction.ipynb
+++ b/learning/courses/quantum-chem-with-vqe/introduction.ipynb
@@ -9,6 +9,8 @@
     "\n",
     "# Introduction\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_ePXDhFWwqj4Q0HY), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "This course is a focused introduction to the variational quantum eigensolver (VQE), including the application of VQE to chemistry. The course is intended for technical practitioners of quantum computing who are interested in applying quantum computing to chemical, biochemical, or biophysical problems. This course covers important elements of a VQE calculation, including these:\n",
     "\n",
     "* Hamiltonian\n",
