--- a/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
+++ b/learning/courses/utility-scale-quantum-computing/utility-iii.ipynb
@@ -2483,6 +2483,16 @@
    "source": [
     "Congratulations! You have completed your introduction to utility-scale quantum computing! You are now poised to make meaningful contributions in the quest for quantum advantage! Thank you for making IBM Quantum&reg; part of your personal quantum journey."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1ddd145f",
+   "metadata": {},
+   "source": [
+    "## Post-course survey\n",
+    "\n",
+    "Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_5vvmdT5yFFetkgK). Your feedback will be used to enhance our content offering and user experience. Thank you!\""
+   ]
   }
  ],
  "metadata": {
