--- a/learning/courses/quantum-computing-in-practice/introduction.ipynb
+++ b/learning/courses/quantum-computing-in-practice/introduction.ipynb
@@ -7,6 +7,8 @@
    "source": [
     "# Course introduction\n",
     "\n",
+    "Before we begin, please take a moment to complete our [pre-course survey](https://your.feedback.ibm.com/jfe/form/SV_6PadhMQiGWsxXTM), which is important to help improve our content offerings and user experience.\n",
+    "\n",
     "Click below to hear a course introduction from Olivia Lanes, or open the video in a separate window on [YouTube.](https://youtube.com/watch?v=sVRpKhCfKRI)\n",
     "\n",
     "<IBMVideo id=\"134063425\" title=\"In this video, Olivia Lanes gives an overview of practical quantum computing in the utility era. She covers intended audience and some background on subjects like Moore's law and theoretical foundations of quantum computing.\"/>\n",
