--- a/learning/courses/variational-algorithm-design/exam.mdx
+++ b/learning/courses/variational-algorithm-design/exam.mdx
@@ -7,6 +7,10 @@ description: Take a 20-question exam to test your quantum chemistry skills and r
 
 ![A square badge stating the name of this course, advanced level, and issued by IBM Quantum&reg;.](/learning/images/courses/variational-algorithm-design/exam/badge.avif)
 
+## Post-course survey
+
+Congratulations on completing this course! Please take a moment to help us improve our course by filling out the following [quick survey](https://your.feedback.ibm.com/jfe/form/SV_cGuII9nhoHNaelU). Your feedback will be used to enhance our content offering and user experience. Thank you!"
+
 ## Test your knowledge
 
 After completing the reading and activities in this course, click the button below to navigate to IBM&reg; Training, where you can take the badging exam for Variational algorithm design.
