--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -18,7 +18,7 @@ This documentation is relevant to the new IBM Quantum&reg; Platform. If you need
 Learn how to install, use, configure and uninstall the official Qiskit Code Assistant extension in Visual Studio Code (VS Code).
 
 <Admonition type="note" title="Notes">
-    - This is an experimental feature available to IBM Quantum&reg; Premium Plan users with an account on either the new [IBM Quantum Platform](https://quantum.cloud.ibm.com/) or the [IBM Quantum Platform Classic](https://quantum.ibm.com/).
+    - This is an experimental feature available to IBM Quantum&reg; Premium Plan users with an account on the new [IBM Quantum Platform.](https://quantum.cloud.ibm.com/)
     - Qiskit Code Assistant is in preview release status and is subject to change.
     - If you have feedback or want to contact the developer team, use the [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
