--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "#### Precision (Estimator only)\n",
     "\n",
-    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`. Because the [`twirling` options](/docs/api/qiskit-ibm-runtime/options-twirling-options) `num_randomizations` and `shots_per_randomization` are enabled by default, the number of shots will actually be the product of `num_randomizations` and `shots_per_randomization` if the `default_shots` value is the only way shots are specified.\n",
+    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`. In addition, because gate-twirling is enabled by default, the product of `num_randomizations` and `shots_per_randomization` takes precedence over those two options.
     "\n",
     "Specifically, for any particular Estimator PUB:\n",
     "\n",
