--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -279,7 +279,7 @@
     "\n",
     "#### Precision (Estimator only)\n",
     "\n",
-    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`. In addition, because gate-twirling is enabled by default, the product of `num_randomizations` and `shots_per_randomization` takes precedence over those two options.
+    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`. In addition, because gate-twirling is enabled by default, the product of `num_randomizations` and `shots_per_randomization` takes precedence over those two options.\n",
     "\n",
     "Specifically, for any particular Estimator PUB:\n",
     "\n",
