--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -5,7 +5,7 @@
    "id": "9857bace",
    "metadata": {},
    "source": [
-    "# Benchmark dynamic circuts with cut Bell pairs"
+    "# Benchmark dynamic circuits with cut Bell pairs"
    ]
   },
   {
@@ -676,9 +676,8 @@
   }
  ],
  "metadata": {
-    "title": "Benchmark dynamic circuts with cut Bell pairs",
   "description": "Benchmark dynamic circuit capabilities with cut Bell pair protocol",
-    "kernelspec": {
+  "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
@@ -694,7 +693,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3"
-  }
+  },
+  "title": "Benchmark dynamic circuits with cut Bell pairs"
  },
  "nbformat": 4,
  "nbformat_minor": 5
