ignore spelling list

--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -5,6 +5,11 @@
    "id": "9857bace",
    "metadata": {},
    "source": [
+    "{/* cspell:ignore LOCC */}\n",
+    "{/* cspell:ignore bitstr */}\n",
+    "{/* cspell:ignore textcoords */}\n",
+    "{/* cspell:ignore xytext */}\n",
+    "{/* cspell:ignore fontsize */}\n",
     "# Benchmark dynamic circuits with cut Bell pairs"
    ]
   },
