--- a/docs/guides/specify-runtime-options.ipynb
+++ b/docs/guides/specify-runtime-options.ipynb
@@ -268,20 +268,18 @@
     "\n",
     "However, if `shots` is not specified by any PUB or in the run keyword argument (or if they are all `None`), then the shots value from the options is used, most notably `default_shots`.\n",
     "\n",
-    "Finally, because the [`twirling` options](/docs/api/qiskit-ibm-runtime/options-twirling-options) `num_randomizations` and `shots_per_randomization` are enabled by default, the number of shots will actually be the product of `num_randomizations` and `shots_per_randomization` if the `default_shots` value is the only way shots are specified.\n",
-    "\n",
     "To summarize, this is the order of precedence for specifying shots in the Sampler, for any particular PUB:\n",
     "\n",
     "1. If the PUB specifies shots, use that value.\n",
     "2. If the `shots` keyword argument is specified in `run`, use that value.\n",
-    "3. If `num_randomizations` and `shots_per_randomization` are specified as `twirling` options (enabled by default), shots are the product of those values.\n",
+    "3. If `num_randomizations` and `shots_per_randomization` are specified as `twirling` options, shots are the product of those values.\n",
     "3. If `sampler.options.default_shots` is specified, use that value.\n",
     "\n",
     "Thus, if shots are specified in all possible places, the one with highest precedence (shots specified in the PUB) is used.\n",
     "\n",
     "#### Precision (Estimator only)\n",
     "\n",
-    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`.\n",
+    "Precision is analogous to shots, described in the previous section, except that the Estimator options contain both `default_shots` and `default_precision`. In addition, because gate-twirling is enabled by default, the product of `num_randomizations` and `shots_per_randomization` takes precedence over those two options.\n",
     "\n",
     "Specifically, for any particular Estimator PUB:\n",
     "\n",
