--- a/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
+++ b/docs/tutorials/edc-cut-bell-pair-benchmarking.ipynb
@@ -10,6 +10,8 @@
     "{/* cspell:ignore textcoords */}\n",
     "{/* cspell:ignore xytext */}\n",
     "{/* cspell:ignore fontsize */}\n",
+    "{/* cspell:ignore  Carrera */}\n",
+    "{/* cspell:ignore  Ristè */}\n",
     "# Benchmark dynamic circuits with cut Bell pairs"
    ]
   },
